chore(table): added empty data handling

--- a/playground/table.html
+++ b/playground/table.html
@@ -197,7 +197,7 @@
               }]
             },{
               "email": "@alicedoe",
-              "first-name": "John", 
+              "first-name": "", 
               "last-name": "Doe",
               "button":  {
                 "id": "email_button",
