--- a/index.html
+++ b/index.html
@@ -179,7 +179,7 @@
 <br><br>
 <div class="sgds-container">
   <div class="sgds-grid">
-    <div class="sgds-col-4 sgds-col-sm-6 sgds-col-md-9">
+    <div class="sgds-col-4 sgds-col-sm-8">
       <div class="sgds-grid">
         <sgds-card class="sgds-col-2 sgds-col-sm-4 sgds-col-md-4">
           <img slot="image" alt="img alternate text goes here" width="467" height="312"
