chore(subnav): fix mobile overflow and menu expanding issue

--- a/index.html
+++ b/index.html
@@ -171,11 +171,11 @@
   <sgds-subnav-item><a href="#">Programme</a></sgds-subnav-item>
   <sgds-subnav-item><a href="#">Speakers</a></sgds-subnav-item>
   <sgds-subnav-item><a href="#">Partners</a></sgds-subnav-item>
-  <sgds-subnav-item><a href="#">Recordings</a></sgds-subnav-item>
+  <sgds-subnav-item><a href="#" target="_blank">Recordings</a></sgds-subnav-item>
   <sgds-subnav-item><a href="#">FAQ</a></sgds-subnav-item>
-  <sgds-button slot="actions" size="sm" fullWidth>Register</sgds-button>
-  <sgds-button slot="actions" size="sm" fullWidth>Exhibit</sgds-button>
-  <sgds-button slot="actions" size="sm" fullWidth>Exhibit</sgds-button>
+  <sgds-button slot="actions" size="sm">Register now</sgds-button>
+  <sgds-button slot="actions" size="sm">Exhibit</sgds-button>
+  <sgds-button slot="actions" size="sm">Exhibit</sgds-button>
 </sgds-subnav>
 <br><br>
 <div class="sgds-container">
