--- a/playground/Card.html
+++ b/playground/Card.html
@@ -5,7 +5,7 @@
 
 <div class="sgds-container">
   <div class="sgds-grid">
-    <sgds-card class="sgds-col-4 sgds-col-sm-4 sgds-col-md-4 sgds-col-lg-4">
+    <sgds-card stretchedLink class="sgds-col-4 sgds-col-sm-4 sgds-col-md-4 sgds-col-lg-4">
       <img slot="image" alt="img alternate text goes here" width="467" height="312"
         src="https://images.unsplash.com/photo-1473093295043-cdd812d0e601?ixlib=rb-1.2.1&amp;ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&amp;auto=format&amp;fit=crop&amp;w=1740&amp;q=80">
       <span slot="subtitle">SUBTITLE</span>
