--- a/playground/Table.html
+++ b/playground/Table.html
@@ -90,7 +90,7 @@
       <h3>Table - Structured elements with vertical header</h3>
       <sgds-table>
         <sgds-table-row>
-          <sgds-table-head noborder>1</sgds-table-head>
+          <sgds-table-head>1</sgds-table-head>
           <sgds-table-cell>John</sgds-table-cell>
           <sgds-table-cell>Doe</sgds-table-cell>
           <sgds-table-cell>
@@ -103,7 +103,7 @@
           </sgds-table-cell>
         </sgds-table-row>
         <sgds-table-row>
-          <sgds-table-head noborder>2</sgds-table-head>
+          <sgds-table-head>2</sgds-table-head>
           <sgds-table-cell>Jane</sgds-table-cell>
           <sgds-table-cell>Doe</sgds-table-cell>
           <sgds-table-cell>
@@ -114,7 +114,7 @@
           <sgds-table-cell>-</sgds-table-cell>
         </sgds-table-row>
         <sgds-table-row>
-          <sgds-table-head noborder>3</sgds-table-head>
+          <sgds-table-head>3</sgds-table-head>
           <sgds-table-cell>Bob</sgds-table-cell>
           <sgds-table-cell>Smith</sgds-table-cell>
           <sgds-table-cell>
@@ -141,7 +141,7 @@
         </sgds-table-row>
 
         <sgds-table-row>
-          <sgds-table-head noborder>1</sgds-table-head>
+          <sgds-table-head>1</sgds-table-head>
           <sgds-table-cell>John</sgds-table-cell>
           <sgds-table-cell>Doe</sgds-table-cell>
           <sgds-table-cell>
@@ -154,7 +154,7 @@
           </sgds-table-cell>
         </sgds-table-row>
         <sgds-table-row>
-          <sgds-table-head noborder>2</sgds-table-head>
+          <sgds-table-head>2</sgds-table-head>
           <sgds-table-cell>Jane</sgds-table-cell>
           <sgds-table-cell>Doe</sgds-table-cell>
           <sgds-table-cell>
@@ -165,7 +165,7 @@
           <sgds-table-cell>-</sgds-table-cell>
         </sgds-table-row>
         <sgds-table-row>
-          <sgds-table-head noborder>3</sgds-table-head>
+          <sgds-table-head>3</sgds-table-head>
           <sgds-table-cell>Bob</sgds-table-cell>
           <sgds-table-cell>Smith</sgds-table-cell>
           <sgds-table-cell>
