fix(Datepicker): only assess empty input when required is true

--- a/playground/Datepicker.html
+++ b/playground/Datepicker.html
@@ -5,7 +5,7 @@
 
 
 <form>
-  <sgds-datepicker noFlip required hasFeedback value="18/07/2025"></sgds-datepicker>
+  <sgds-datepicker noFlip hasFeedback value="18/07/2025"></sgds-datepicker>
   <sgds-datepicker noFlip required value="07/08/2024 - 09/08/2024" mode="range"></sgds-datepicker>
 
   <sgds-button type="submit">Submit</sgds-button>
