feat(input): new trailing icon slot, action slot and unmask mask password type input

--- a/playground/Input.html
+++ b/playground/Input.html
@@ -9,3 +9,16 @@
 <sgds-input value="This is a normal input"></sgds-input>
 <br/>
 <sgds-input value="This is a disabled input" disabled></sgds-input>
+
+<h2>Password</h2>
+<sgds-input type="password" value="This is a password input" suffix="test" loading>
+    <sgds-icon-button slot="action" name="trash"></sgds-icon-button>
+</sgds-input>
+
+<br/>
+<h2>Trailing Icon</h2>
+<sgds-input value="This is a normal input" loading ></sgds-input>
+<sgds-input value="This is a normal input" valid></sgds-input>
+<sgds-input value="This is a normal input" valid>
+    <sgds-icon name="trash" slot="trailing-icon"></sgds-icon>
+</sgds-input>
