feat(MenuItem): dropdown-item, select-item, combo-box-item remove nowrap

--- a/playground/Dropdown.html
+++ b/playground/Dropdown.html
@@ -3,6 +3,7 @@
 <link href="../src/themes/night.css" rel="stylesheet" type="text/css" />
 <link href="../src/css/sgds.css" rel="stylesheet" type="text/css" />
 
+<div style="width: 400px;border:1px solid red;">
 <sgds-dropdown>
   <sgds-button slot="toggler" role="button">
     Dropdown
@@ -30,4 +31,4 @@
   <sgds-dropdown-item><sgds-icon name="placeholder"></sgds-icon>Option label</sgds-dropdown-item>
   <sgds-dropdown-item><sgds-icon name="placeholder"></sgds-icon>Option label</sgds-dropdown-item>
 </sgds-dropdown>
- 
+ </div>
