feat(overflow menu): update overflow menu to be public component

--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@
   </script>
   <script type="module" src="src/index.ts"></script>
 
-  <script type="module" src="src/internals/OverflowMenu/index.ts"></script>
+  <script type="module" src="src/OverflowMenu/index.ts"></script>
   <link href="./src/themes/day.css" rel="stylesheet" type="text/css" />
   <link href="./src/themes/night.css" rel="stylesheet" type="text/css" />
   <link href="./src/css/sgds.css" rel="stylesheet" type="text/css" />
