--- a/playground/Card.html
+++ b/playground/Card.html
@@ -5,85 +5,110 @@
 
 <div class="sgds-container">
   <div class="sgds-grid">
-    <sgds-card stretchedLink class="sgds-col-4 sgds-col-sm-4 sgds-col-md-4 sgds-col-lg-4">
-      <img slot="image" alt="img alternate text goes here" width="467" height="312"
-        src="https://images.unsplash.com/photo-1473093295043-cdd812d0e601?ixlib=rb-1.2.1&amp;ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&amp;auto=format&amp;fit=crop&amp;w=1740&amp;q=80">
-      <span slot="subtitle">SUBTITLE</span>
-      <span slot="title">Vertical Image Card</span>
-      <span slot="description">default vertical card default vertical card default vertical card default vertical card default vertical card</span>
+    <sgds-card class="sgds-col-4 sgds-col-sm-4 sgds-col-md-4 sgds-col-lg-4" tinted>
+      <!-- <img slot="image" alt="img alternate text goes here" width="80" height="80" src="https://www.designsystem.tech.gov.sg/assets/img/logo-sgds.svg"> -->
+      <sgds-badge variant="primary" slot="upper">New</sgds-badge>
+      <span slot="subtitle">EVENTS</span>
+      <span slot="title">Innovative Solutions for You</span>
+      <div style="display: flex; flex-direction: column; gap: 24px;">
+        <sgds-icon-list size="sm">
+          <div role="listitem">
+            <sgds-icon size="md" name="calendar"></sgds-icon>12 September
+          </div>
+          <div role="listitem">
+            <sgds-icon size="md" name="laptop"></sgds-icon>Online
+          </div>
+        </sgds-icon-list>
+        <sgds-link>
+          <a href="#">Register now <sgds-icon name="arrow-right"></sgds-icon></a>
+        </sgds-link>
+      </div>
+      <span slot="description">Discover how our platform can streamline your workflow and enhance productivity. With cutting-edge technology and user-friendly design, we empower you to achieve more.</span>
+      <div slot="lower" style="display: flex; flex-wrap: wrap; gap: 8px;">
+        <sgds-badge variant="neutral" outlined>Design</sgds-badge>
+        <sgds-badge variant="neutral" outlined>Research</sgds-badge>
+      </div>
       <sgds-link slot="link">
-        <a href="#">SM light dom anchor <sgds-icon name="arrow-right"></sgds-icon></a>
+        <a href="#">Register now <sgds-icon name="arrow-right"></sgds-icon></a>
       </sgds-link>
     </sgds-card>
-    <sgds-card stretchedLink class="sgds-col-3 sgds-col-sm-4 sgds-col-md-4 sgds-col-lg-4">
-      <img slot="image" alt="img alternate text goes here" width="467" height="312"
-        src="https://images.unsplash.com/photo-1473093295043-cdd812d0e601?ixlib=rb-1.2.1&amp;ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&amp;auto=format&amp;fit=crop&amp;w=1740&amp;q=80">
-      <span slot="subtitle">SUBTITLE</span>
-      <span slot="title">Vertical Image Card</span>
-      <span slot="description">default vertical card</span>
-      <a href="#" slot="link">SM light dom anchor <sgds-icon name="arrow-right"></sgds-icon></a>
-    </sgds-card>
-    <sgds-card class="sgds-col-2 sgds-col-sm-4 sgds-col-md-4 sgds-col-lg-4">
-      <img slot="image" alt="img alternate text goes here" width="467" height="312"
-        src="https://images.unsplash.com/photo-1473093295043-cdd812d0e601?ixlib=rb-1.2.1&amp;ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&amp;auto=format&amp;fit=crop&amp;w=1740&amp;q=80">
-      <span slot="subtitle">SUBTITLE</span>
-      <span slot="title">Vertical Image Card</span>
-      <span slot="description">default vertical card</span>
+    <sgds-card class="sgds-col-4 sgds-col-sm-4 sgds-col-md-4 sgds-col-lg-4" tinted hideBorder>
+      <sgds-badge variant="primary" slot="upper">New</sgds-badge>
+      <span slot="subtitle">EVENTS</span>
+      <span slot="title">Innovative Solutions for You</span>
+      <div style="display: flex; flex-direction: column; gap: 24px;">
+        <sgds-icon-list size="sm">
+          <div role="listitem">
+            <sgds-icon size="md" name="calendar"></sgds-icon>12 September
+          </div>
+          <div role="listitem">
+            <sgds-icon size="md" name="laptop"></sgds-icon>Online
+          </div>
+        </sgds-icon-list>
+      </div>
+      <span slot="description">Discover how our platform can streamline your workflow and enhance productivity. With cutting-edge technology and user-friendly design, we empower you to achieve more.</span>
+      <div slot="lower" style="display: flex; flex-wrap: wrap; gap: 8px;">
+        <sgds-badge variant="neutral" outlined>Design</sgds-badge>
+        <sgds-badge variant="neutral" outlined>Research</sgds-badge>
+      </div>
       <sgds-link slot="link">
-        <a href="#">SM light dom anchor <sgds-icon name="arrow-right"></sgds-icon></a>
+        <a href="#">Register now <sgds-icon name="arrow-right"></sgds-icon></a>
       </sgds-link>
     </sgds-card>
-    <sgds-card class="sgds-col-2 sgds-col-sm-4 sgds-col-md-4 sgds-col-lg-4">
-      <img slot="image" alt="img alternate text goes here" width="467" height="312"
-        src="https://images.unsplash.com/photo-1473093295043-cdd812d0e601?ixlib=rb-1.2.1&amp;ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&amp;auto=format&amp;fit=crop&amp;w=1740&amp;q=80">
-      <span slot="subtitle">SUBTITLE</span>
-      <span slot="title">Vertical Image Card</span>
-      <span slot="description">default vertical card</span>
+    <sgds-card class="sgds-col-4 sgds-col-sm-4 sgds-col-md-4 sgds-col-lg-4">
+      <sgds-badge variant="primary" slot="upper">New</sgds-badge>
+      <sgds-overflow-menu slot="menu">
+        <sgds-dropdown-item>View</sgds-dropdown-item>
+        <sgds-dropdown-item>Edit</sgds-dropdown-item>
+        <sgds-dropdown-item>Delete</sgds-dropdown-item>
+      </sgds-overflow-menu>
+      <span slot="subtitle">EVENTS</span>
+      <span slot="title">Innovative Solutions for You</span>
+      <div style="display: flex; flex-direction: column; gap: 24px;">
+        <sgds-icon-list size="sm">
+          <div role="listitem">
+            <sgds-icon size="md" name="calendar"></sgds-icon>12 September
+          </div>
+          <div role="listitem">
+            <sgds-icon size="md" name="laptop"></sgds-icon>Online
+          </div>
+        </sgds-icon-list>
+      </div>
+      <span slot="description">Discover how our platform can streamline your workflow and enhance productivity. With cutting-edge technology and user-friendly design, we empower you to achieve more.</span>
+      <div slot="lower" style="display: flex; flex-wrap: wrap; gap: 8px;">
+        <sgds-badge variant="neutral" outlined>Design</sgds-badge>
+        <sgds-badge variant="neutral" outlined>Research</sgds-badge>
+      </div>
       <sgds-link slot="link">
-        <a href="#">SM light dom anchor <sgds-icon name="arrow-right"></sgds-icon></a>
+        <a href="#">Register now <sgds-icon name="arrow-right"></sgds-icon></a>
       </sgds-link>
     </sgds-card>
-  </div>
-  <br>
-  <div class="sgds-grid">
-    <sgds-card orientation="horizontal" class="sgds-col-4 sgds-col-sm-4 sgds-col-md-4 sgds-col-lg-4">
-      <img slot="image" alt="img alternate text goes here" width="467" height="312"
-        src="https://images.unsplash.com/photo-1473093295043-cdd812d0e601?ixlib=rb-1.2.1&amp;ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&amp;auto=format&amp;fit=crop&amp;w=1740&amp;q=80">
-      <span slot="subtitle">SUBTITLE</span>
-      <span slot="title">Vertical Image Card</span>
-      <span slot="description">default vertical card default vertical card default vertical card default vertical card default vertical card</span>
+    <sgds-card class="sgds-col-4 sgds-col-sm-4 sgds-col-md-4 sgds-col-lg-4" tinted hideBorder>
+      <sgds-badge variant="primary" slot="upper">New</sgds-badge>
+      <sgds-overflow-menu slot="menu">
+        <sgds-dropdown-item>View</sgds-dropdown-item>
+        <sgds-dropdown-item>Edit</sgds-dropdown-item>
+        <sgds-dropdown-item>Delete</sgds-dropdown-item>
+      </sgds-overflow-menu>
+      <span slot="subtitle">EVENTS</span>
+      <span slot="title">Innovative Solutions for You</span>
+      <div style="display: flex; flex-direction: column; gap: 24px;">
+        <sgds-icon-list size="sm">
+          <div role="listitem">
+            <sgds-icon size="md" name="calendar"></sgds-icon>12 September
+          </div>
+          <div role="listitem">
+            <sgds-icon size="md" name="laptop"></sgds-icon>Online
+          </div>
+        </sgds-icon-list>
+      </div>
+      <span slot="description">Discover how our platform can streamline your workflow and enhance productivity. With cutting-edge technology and user-friendly design, we empower you to achieve more.</span>
+      <div slot="lower" style="display: flex; flex-wrap: wrap; gap: 8px;">
+        <sgds-badge variant="neutral" outlined>Design</sgds-badge>
+        <sgds-badge variant="neutral" outlined>Research</sgds-badge>
+      </div>
       <sgds-link slot="link">
-        <a href="#">SM light dom anchor <sgds-icon name="arrow-right"></sgds-icon></a>
-      </sgds-link>
-    </sgds-card>
-    <sgds-card orientation="horizontal" class="sgds-col-3 sgds-col-sm-4 sgds-col-md-4 sgds-col-lg-4">
-      <img slot="image" alt="img alternate text goes here" width="467" height="312"
-        src="https://images.unsplash.com/photo-1473093295043-cdd812d0e601?ixlib=rb-1.2.1&amp;ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&amp;auto=format&amp;fit=crop&amp;w=1740&amp;q=80">
-      <span slot="subtitle">SUBTITLE</span>
-      <span slot="title">Vertical Image Card</span>
-      <span slot="description">default vertical card</span>
-      <sgds-link slot="link">
-        <a href="#">SM light dom anchor <sgds-icon name="arrow-right"></sgds-icon></a>
-      </sgds-link>
-    </sgds-card>
-    <sgds-card orientation="horizontal" class="sgds-col-2 sgds-col-sm-4 sgds-col-md-4 sgds-col-lg-4">
-      <img slot="image" alt="img alternate text goes here" width="467" height="312"
-        src="https://images.unsplash.com/photo-1473093295043-cdd812d0e601?ixlib=rb-1.2.1&amp;ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&amp;auto=format&amp;fit=crop&amp;w=1740&amp;q=80">
-      <span slot="subtitle">SUBTITLE</span>
-      <span slot="title">Vertical Image Card</span>
-      <span slot="description">default vertical card</span>
-      <sgds-link slot="link">
-        <a href="#">SM light dom anchor <sgds-icon name="arrow-right"></sgds-icon></a>
-      </sgds-link>
-    </sgds-card>
-    <sgds-card orientation="horizontal" class="sgds-col-2 sgds-col-sm-4 sgds-col-md-4 sgds-col-lg-4">
-      <img slot="image" alt="img alternate text goes here" width="467" height="312"
-        src="https://images.unsplash.com/photo-1473093295043-cdd812d0e601?ixlib=rb-1.2.1&amp;ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&amp;auto=format&amp;fit=crop&amp;w=1740&amp;q=80">
-      <span slot="subtitle">SUBTITLE</span>
-      <span slot="title">Vertical Image Card</span>
-      <span slot="description">default vertical card</span>
-      <sgds-link slot="link">
-        <a href="#">SM light dom anchor <sgds-icon name="arrow-right"></sgds-icon></a>
+        <a href="#">Register now <sgds-icon name="arrow-right"></sgds-icon></a>
       </sgds-link>
     </sgds-card>
   </div>
