--- a/playground/Badge.html
+++ b/playground/Badge.html
@@ -25,90 +25,89 @@
       <div class="d-flex-row">
         <sgds-badge variant="info" outlined>
           <sgds-icon slot="icon" name="placeholder" size="sm"></sgds-icon>
-          Testing Testing long long text TestingTestingTesting
+          A very long badge name without limitation of parent width
         </sgds-badge>
-        <sgds-badge variant="info" show dismissible> Testing </sgds-badge>
+        <sgds-badge variant="info" show dismissible> badge </sgds-badge>
         <sgds-badge variant="success">
           <sgds-icon slot="icon" name="placeholder" size="sm"></sgds-icon>
-          Testing
+          badge
         </sgds-badge>
         <sgds-badge variant="success" outlined>
           <sgds-icon slot="icon" name="placeholder" size="sm"></sgds-icon>
-          Testing
+          badge
         </sgds-badge>
-        <sgds-badge variant="danger"> Testingi </sgds-badge>
+        <sgds-badge variant="danger"> badge</sgds-badge>
         <sgds-badge variant="danger" outlined>
           <sgds-icon slot="icon" name="placeholder" size="sm"></sgds-icon>
-          Testing
+          badge
         </sgds-badge>
         <sgds-badge variant="warning">
           <sgds-icon slot="icon" name="placeholder" size="sm"></sgds-icon>
-          Testing
+          badge
         </sgds-badge>
         <sgds-badge variant="warning" outlined>
           <sgds-icon slot="icon" name="placeholder" size="sm"></sgds-icon>
-          Testing
+          badge
         </sgds-badge>
         <sgds-badge variant="neutral">
           <sgds-icon slot="icon" name="placeholder" size="sm"></sgds-icon>
-          Testing
+          badge
         </sgds-badge>
         <sgds-badge variant="neutral" outlined>
           <sgds-icon slot="icon" name="placeholder" size="sm"></sgds-icon>
-          Testing
+          badge
         </sgds-badge>
         <sgds-badge variant="success" outlined show dismissible>
           <sgds-icon slot="icon" name="placeholder" size="sm"></sgds-icon>
-          TESZI
+          A very long badge name without limitation of parent width
         </sgds-badge>
-        <sgds-badge variant="neutral" show dismissible> Testing </sgds-badge>
+        <sgds-badge variant="neutral" show dismissible> badge </sgds-badge>
         <br />
       </div>
     </div>
 
     <div class="container">
       <h2>Badge - Truncation samples</h2>
-      <div class="d-flex-row" style="width: 150px">
+      <div class="d-flex-row" style="width: 200px">
         <sgds-badge variant="info" outlined>
           <sgds-icon slot="icon" name="placeholder" size="sm"></sgds-icon>
-          Testing
+          A very long badge name without limitation of parent width
         </sgds-badge>
-        <sgds-badge variant="info" show dismissible> Testing </sgds-badge>
+        <sgds-badge variant="info" show dismissible> badge </sgds-badge>
         <sgds-badge variant="success">
           <sgds-icon slot="icon" name="placeholder" size="sm"></sgds-icon>
-          Testing Testing long long text TestingTestingTesting
+          badge
         </sgds-badge>
         <sgds-badge variant="success" outlined>
           <sgds-icon slot="icon" name="placeholder" size="sm"></sgds-icon>
-          Testing
+          badge
         </sgds-badge>
-        <sgds-badge variant="danger"> Testingi </sgds-badge>
+        <sgds-badge variant="danger"> badge</sgds-badge>
         <sgds-badge variant="danger" outlined>
           <sgds-icon slot="icon" name="placeholder" size="sm"></sgds-icon>
-          Testing
+          badge
         </sgds-badge>
         <sgds-badge variant="warning">
           <sgds-icon slot="icon" name="placeholder" size="sm"></sgds-icon>
-          Testing
+          badge
         </sgds-badge>
         <sgds-badge variant="warning" outlined>
           <sgds-icon slot="icon" name="placeholder" size="sm"></sgds-icon>
-          Testing
+          badge
         </sgds-badge>
         <sgds-badge variant="neutral">
           <sgds-icon slot="icon" name="placeholder" size="sm"></sgds-icon>
-          Testing
+          badge
         </sgds-badge>
         <sgds-badge variant="neutral" outlined>
           <sgds-icon slot="icon" name="placeholder" size="sm"></sgds-icon>
-          Testing
+          badge
         </sgds-badge>
         <sgds-badge variant="success" outlined show dismissible>
           <sgds-icon slot="icon" name="placeholder" size="sm"></sgds-icon>
-          TESZI
+          A very long badge name without limitation of parent width
         </sgds-badge>
-        <sgds-badge variant="neutral" show dismissible> Testing </sgds-badge>
-        <br />
+        <sgds-badge variant="neutral" show dismissible> badge </sgds-badge>
       </div>
     </div>
   </body>
