chore(Badge): added max-width default and enable full width

--- a/playground/Badge.html
+++ b/playground/Badge.html
@@ -68,7 +68,7 @@
 
     <div class="container">
       <h2>Badge - Truncation samples</h2>
-      <div class="d-flex-row" style="width: 200px">
+      <div class="d-flex-row" style="width: 300px">
         <sgds-badge variant="info" outlined>
           <sgds-icon slot="icon" name="placeholder" size="sm"></sgds-icon>
           A very long badge name without limitation of parent width
@@ -83,9 +83,9 @@
           badge
         </sgds-badge>
         <sgds-badge variant="danger"> badge</sgds-badge>
-        <sgds-badge variant="danger" outlined>
+        <sgds-badge variant="danger" outlined fullWidth>
           <sgds-icon slot="icon" name="placeholder" size="sm"></sgds-icon>
-          badge
+          A very long badge name without limitation of parent width
         </sgds-badge>
         <sgds-badge variant="warning">
           <sgds-icon slot="icon" name="placeholder" size="sm"></sgds-icon>
