feat(Card): new upper slot

--- a/playground/Card.html
+++ b/playground/Card.html
@@ -6,25 +6,30 @@
 <div class="sgds-container">
   <div class="sgds-grid">
     <sgds-card class="sgds-col-4 sgds-col-sm-4 sgds-col-md-4 sgds-col-lg-4" tinted>
-      <!-- <img slot="image" alt="img alternate text goes here" width="80" height="80" src="https://www.designsystem.tech.gov.sg/assets/img/logo-sgds.svg"> -->
-      <sgds-badge variant="primary" slot="upper">New</sgds-badge>
+      <img slot="image" alt="img alternate text goes here" width="80" height="80" src="https://www.designsystem.tech.gov.sg/assets/img/logo-sgds.svg">
+      <!-- <sgds-badge variant="primary" slot="upper">  New</sgds-badge> -->
+      <sgds-icon slot="icon" name="box-seam" size="3-xl"></sgds-icon>
+      <sgds-overflow-menu slot="menu">
+        <sgds-dropdown-item>View</sgds-dropdown-item>
+        <sgds-dropdown-item>Edit</sgds-dropdown-item>
+        <sgds-dropdown-item>Delete</sgds-dropdown-item>
+      </sgds-overflow-menu>
       <span slot="subtitle">EVENTS</span>
       <span slot="title">Innovative Solutions for You</span>
-      <div style="display: flex; flex-direction: column; gap: 24px;">
+      <div style="display: flex; flex-direction: column; gap: 24px">
         <sgds-icon-list size="sm">
-          <div role="listitem">
-            <sgds-icon size="md" name="calendar"></sgds-icon>12 September
-          </div>
-          <div role="listitem">
-            <sgds-icon size="md" name="laptop"></sgds-icon>Online
-          </div>
+          <div role="listitem"><sgds-icon size="md" name="calendar"></sgds-icon>12 September</div>
+          <div role="listitem"><sgds-icon size="md" name="laptop"></sgds-icon>Online</div>
         </sgds-icon-list>
         <sgds-link>
           <a href="#">Register now <sgds-icon name="arrow-right"></sgds-icon></a>
         </sgds-link>
       </div>
-      <span slot="description">Discover how our platform can streamline your workflow and enhance productivity. With cutting-edge technology and user-friendly design, we empower you to achieve more.</span>
-      <div slot="lower" style="display: flex; flex-wrap: wrap; gap: 8px;">
+      <span slot="description"
+        >Discover how our platform can streamline your workflow and enhance productivity. With cutting-edge technology
+        and user-friendly design, we empower you to achieve more.</span
+      >
+      <div slot="lower" style="display: flex; flex-wrap: wrap; gap: 8px">
         <sgds-badge variant="neutral" outlined>Design</sgds-badge>
         <sgds-badge variant="neutral" outlined>Research</sgds-badge>
       </div>
@@ -33,21 +38,27 @@
       </sgds-link>
     </sgds-card>
     <sgds-card class="sgds-col-4 sgds-col-sm-4 sgds-col-md-4 sgds-col-lg-4" tinted hideBorder>
-      <sgds-badge variant="primary" slot="upper">New</sgds-badge>
+      <!-- <sgds-badge variant="primary" slot="upper">New</sgds-badge> -->
+      <sgds-icon slot="icon" name="box-seam" size="3-xl"></sgds-icon>
+
+      <sgds-overflow-menu slot="menu">
+        <sgds-dropdown-item>View</sgds-dropdown-item>
+        <sgds-dropdown-item>Edit</sgds-dropdown-item>
+        <sgds-dropdown-item>Delete</sgds-dropdown-item>
+      </sgds-overflow-menu>
       <span slot="subtitle">EVENTS</span>
       <span slot="title">Innovative Solutions for You</span>
-      <div style="display: flex; flex-direction: column; gap: 24px;">
+      <div style="display: flex; flex-direction: column; gap: 24px">
         <sgds-icon-list size="sm">
-          <div role="listitem">
-            <sgds-icon size="md" name="calendar"></sgds-icon>12 September
-          </div>
-          <div role="listitem">
-            <sgds-icon size="md" name="laptop"></sgds-icon>Online
-          </div>
+          <div role="listitem"><sgds-icon size="md" name="calendar"></sgds-icon>12 September</div>
+          <div role="listitem"><sgds-icon size="md" name="laptop"></sgds-icon>Online</div>
         </sgds-icon-list>
       </div>
-      <span slot="description">Discover how our platform can streamline your workflow and enhance productivity. With cutting-edge technology and user-friendly design, we empower you to achieve more.</span>
-      <div slot="lower" style="display: flex; flex-wrap: wrap; gap: 8px;">
+      <span slot="description"
+        >Discover how our platform can streamline your workflow and enhance productivity. With cutting-edge technology
+        and user-friendly design, we empower you to achieve more.</span
+      >
+      <div slot="lower" style="display: flex; flex-wrap: wrap; gap: 8px">
         <sgds-badge variant="neutral" outlined>Design</sgds-badge>
         <sgds-badge variant="neutral" outlined>Research</sgds-badge>
       </div>
@@ -56,7 +67,7 @@
       </sgds-link>
     </sgds-card>
     <sgds-card class="sgds-col-4 sgds-col-sm-4 sgds-col-md-4 sgds-col-lg-4">
-      <sgds-badge variant="primary" slot="upper">New</sgds-badge>
+      <!-- <sgds-badge variant="primary" slot="upper">New</sgds-badge> -->
       <sgds-overflow-menu slot="menu">
         <sgds-dropdown-item>View</sgds-dropdown-item>
         <sgds-dropdown-item>Edit</sgds-dropdown-item>
@@ -64,18 +75,17 @@
       </sgds-overflow-menu>
       <span slot="subtitle">EVENTS</span>
       <span slot="title">Innovative Solutions for You</span>
-      <div style="display: flex; flex-direction: column; gap: 24px;">
+      <div style="display: flex; flex-direction: column; gap: 24px">
         <sgds-icon-list size="sm">
-          <div role="listitem">
-            <sgds-icon size="md" name="calendar"></sgds-icon>12 September
-          </div>
-          <div role="listitem">
-            <sgds-icon size="md" name="laptop"></sgds-icon>Online
-          </div>
+          <div role="listitem"><sgds-icon size="md" name="calendar"></sgds-icon>12 September</div>
+          <div role="listitem"><sgds-icon size="md" name="laptop"></sgds-icon>Online</div>
         </sgds-icon-list>
       </div>
-      <span slot="description">Discover how our platform can streamline your workflow and enhance productivity. With cutting-edge technology and user-friendly design, we empower you to achieve more.</span>
-      <div slot="lower" style="display: flex; flex-wrap: wrap; gap: 8px;">
+      <span slot="description"
+        >Discover how our platform can streamline your workflow and enhance productivity. With cutting-edge technology
+        and user-friendly design, we empower you to achieve more.</span
+      >
+      <div slot="lower" style="display: flex; flex-wrap: wrap; gap: 8px">
         <sgds-badge variant="neutral" outlined>Design</sgds-badge>
         <sgds-badge variant="neutral" outlined>Research</sgds-badge>
       </div>
@@ -92,18 +102,17 @@
       </sgds-overflow-menu>
       <span slot="subtitle">EVENTS</span>
       <span slot="title">Innovative Solutions for You</span>
-      <div style="display: flex; flex-direction: column; gap: 24px;">
+      <div style="display: flex; flex-direction: column; gap: 24px">
         <sgds-icon-list size="sm">
-          <div role="listitem">
-            <sgds-icon size="md" name="calendar"></sgds-icon>12 September
-          </div>
-          <div role="listitem">
-            <sgds-icon size="md" name="laptop"></sgds-icon>Online
-          </div>
+          <div role="listitem"><sgds-icon size="md" name="calendar"></sgds-icon>12 September</div>
+          <div role="listitem"><sgds-icon size="md" name="laptop"></sgds-icon>Online</div>
         </sgds-icon-list>
       </div>
-      <span slot="description">Discover how our platform can streamline your workflow and enhance productivity. With cutting-edge technology and user-friendly design, we empower you to achieve more.</span>
-      <div slot="lower" style="display: flex; flex-wrap: wrap; gap: 8px;">
+      <span slot="description"
+        >Discover how our platform can streamline your workflow and enhance productivity. With cutting-edge technology
+        and user-friendly design, we empower you to achieve more.</span
+      >
+      <div slot="lower" style="display: flex; flex-wrap: wrap; gap: 8px">
         <sgds-badge variant="neutral" outlined>Design</sgds-badge>
         <sgds-badge variant="neutral" outlined>Research</sgds-badge>
       </div>
