feat(Card): handle upper slot styles

--- a/playground/Card.html
+++ b/playground/Card.html
@@ -6,9 +6,9 @@
 <div class="sgds-container">
   <div class="sgds-grid">
     <sgds-card class="sgds-col-4 sgds-col-sm-4 sgds-col-md-4 sgds-col-lg-4" tinted>
-      <img slot="image" alt="img alternate text goes here" width="80" height="80" src="https://www.designsystem.tech.gov.sg/assets/img/logo-sgds.svg">
-      <!-- <sgds-badge variant="primary" slot="upper">  New</sgds-badge> -->
-      <sgds-icon slot="icon" name="box-seam" size="3-xl"></sgds-icon>
+      <!-- <img slot="image" alt="img alternate text goes here" width="80" height="80" src="https://www.designsystem.tech.gov.sg/assets/img/logo-sgds.svg"> -->
+      <sgds-badge variant="primary" slot="upper">  New</sgds-badge>
+      <!-- <sgds-icon slot="icon" name="box-seam" size="3-xl"></sgds-icon> -->
       <sgds-overflow-menu slot="menu">
         <sgds-dropdown-item>View</sgds-dropdown-item>
         <sgds-dropdown-item>Edit</sgds-dropdown-item>
